dump versions