@@ -6,6 +6,5 @@ lazy val root = project
     name := "Gears",
     organization := "ch.epfl.lamp",
     version := "0.1.0-SNAPSHOT",
-    javaOptions += "--enable-preview --version 19",
     libraryDependencies += "org.scalameta" %% "munit" % "0.7.29" % Test
   )
